--- a/2.Bash.md
+++ b/2.Bash.md
@@ -870,6 +870,7 @@ Create a script that will perform the following actions:
     Replace every instance of 'Navy' in "infile" with 'Army'.
     Replacements are case-sensitive.
     Write the output to the file specifed by the variable 'outfile'.
+
 ```
 function q1()
 {
@@ -900,8 +901,7 @@ cut -d: -f1 /etc/passwd
 
 
 Create a script that will perform the following actions:
-
-    Print to standard output all usernames from the file path specified by the parameter filename sorted ascending numerically by user id.
+Print to standard output all usernames from the file path specified by the parameter filename sorted ascending numerically by user id.
     The file will be in the format of /etc/passwd
 
 
@@ -918,8 +918,8 @@ function q1()
 
 Create a script that will perform the following actions:
 
-    Delete all files contained in the directory specified by dirdel
-    Also delete the directory specified by dirdel
+Delete all files contained in the directory specified by dirdel
+Also delete the directory specified by dirdel
 
 ```
 function q1()
@@ -936,8 +936,8 @@ rm -r $dirdel
 
 Create a script that will perform the following actions:
 
-    Create a file specified by the name newfile.
-    Set the file modified date to the value specified in filedate and time to '1730'. NOTE: filedate contains only a valid date in YYYYMMDD format, not a time.
+Create a file specified by the name newfile.
+Set the file modified date to the value specified in filedate and time to '1730'. NOTE: filedate contains only a valid date in YYYYMMDD format, not a time.
 
 ```
 
@@ -1011,9 +1011,9 @@ cat $src | grep -v $match > $dst
 
 
 
-    Print to standard output the total number of files in the directory specified by dirname.
-    If the directory does not exist, print 'Invalid Directory'
-    The count excludes the '.' and '..' pseudo-directories.
+Print to standard output the total number of files in the directory specified by dirname.
+If the directory does not exist, print 'Invalid Directory'
+The count excludes the '.' and '..' pseudo-directories.
 
 ```
 
@@ -1032,11 +1032,9 @@ function q1()
 
 
 Read the file specified by fname and perform an action based on the contents of the file:
-
-    If contents are 0 to 9, print "single digit" to standard output.
-    If contents are 10 to 99, print "double digit" to standard output.
-    If contents are 100 to 999, print "triple digit" to standard output.
-    Otherwise, print "Error" to standard output.
+If contents are 10 to 99, print "double digit" to standard output.
+If contents are 100 to 999, print "triple digit" to standard output.
+Otherwise, print "Error" to standard output.
 
 ```
 cont=(cat $fname)
@@ -1062,11 +1060,11 @@ tar -czf
 
 {Bash)
 
-    Print all lines from the file specified as "filename" file to standard output that are not blank lines and are not comments.
-    Comments are lines which include a '#' as the first character.
-    Do not print anything else to standard output for this question.
-    The format of the input file will be similar to that of the /etc/hosts file.
-
+Print all lines from the file specified as "filename" file to standard output that are not blank lines and are not comments.
+Comments are lines which include a '#' as the first character.
+Do not print anything else to standard output for this question.
+The format of the input file will be similar to that of the /etc/hosts file.
+```
 function q1()
 {
   #Valid Variables are:
@@ -1074,11 +1072,12 @@ function q1()
   #You code here
   egrep -v '^#|^$' $filename
 }
----------------------------------------------------
+```
 
-    Locate all files that end in ".log" in the specified directory by "logs"
-    Create an archive of those files in a gzipped tar ball
-    Store the gzipped tar ball as the file name specified in "archive"
+Locate all files that end in ".log" in the specified directory by "logs"
+Create an archive of those files in a gzipped tar ball
+Store the gzipped tar ball as the file name specified in "archive"
+```
 function q2()
 {
   #Valid Variables are:
@@ -1087,12 +1086,13 @@ function q2()
   #Your code here
   find $logs -name '*.log' -exec tar -czf  $archive {} +
 }
-----------------------------------------------------
+```
 
-    Locate all files in the directory "searchdir" that contain the case insensitive text "CRITICAL".
-    Write all the filenames with path into a file specified by argument "output".
+Locate all files in the directory "searchdir" that contain the case insensitive text "CRITICAL".
+Write all the filenames with path into a file specified by argument "output".
 
 IMPORTANT NOTE: The contents of the file are what matter, not the filename. No filenames will contain critical.
+```
 function q3()
 {
   #Valid Variables are:
@@ -1101,10 +1101,11 @@ function q3()
   #Your code here
   grep -ir 'CRITICAL' $searchdir | cut -d: -f1 > $output
 }
--------------------------------------------------------
+```
 
-    Given a space separated list of directories in "dirlist", your code will obtain the total number of files in all the directories. Subdirectories will NOT be included in the total.
-    Print to standard output the total number of files
+Given a space separated list of directories in "dirlist", your code will obtain the total number of files in all the directories. Subdirectories will NOT be included in the total.
+Print to standard output the total number of files
+```
 function q4()
 {
   #Valid Variables are:
@@ -1114,8 +1115,8 @@ function q4()
 }
 ```
 
-    Delete all files contained in the directory specified by "dirdel"
-    Do not delete the directory specified by "dirdel"
+Delete all files contained in the directory specified by "dirdel"
+Do not delete the directory specified by "dirdel"
 ```
 function q5()
 {
@@ -1126,9 +1127,9 @@ function q5()
 }
 ```
 
-    Create a file specified by the name contained in parameter "newfile"
-    Set the modified date of the file to June 14, of the current year
-    Set the modified time to the file to 0830
+Create a file specified by the name contained in parameter "newfile"
+Set the modified date of the file to June 14, of the current year
+Set the modified time to the file to 0830
 ```
 function q6()
 {
@@ -1138,11 +1139,11 @@ function q6()
   touch -t 202406140830 $newfile
 }
 ```
-    Read the file specified by "filename" and perform an action based on the contents of the file
-    If the contents of the file are "abc", print "123" to standard output
-    If the contents of the file are "def", print "789" to standard output
-    If the contents of the file are "xyz", print "000" to standard output
-    If the contents of the file are not "abc", "def", or "xyz", print "Error" to standard output
+Read the file specified by "filename" and perform an action based on the contents of the file
+ the contents of the file are "abc", print "123" to standard output
+If the contents of the file are "def", print "789" to standard output
+If the contents of the file are "xyz", print "000" to standard output
+If the contents of the file are not "abc", "def", or "xyz", print "Error" to standard output
 
 ```
 function q7() {
@@ -1162,9 +1163,10 @@ function q7() {
   fi
 }
 ```
-----------------------------------------------------
+
 Create a script that will perform the following actions:
 Copy all lines from the file specified by "src" to the file specified by "dst" which contain the text specified by "match"
+```
  function q8()
 {
   #Valid Variables are:
@@ -1174,10 +1176,10 @@ Copy all lines from the file specified by "src" to the file specified by "dst" w
   #Your code here
   grep $match $src > $dst
 }
--------------------------------------------------------
+```
 
-    Terminate the process that has the name specified by 'var'.
-    The name of the process in 'var' varies and will change each time the application is run
+Terminate the process that has the name specified by 'var'.
+The name of the process in 'var' varies and will change each time the application is run
 ```   
 function q9()
 {
@@ -1188,9 +1190,9 @@ function q9()
 }
 ```
 
-    Given a directory specified by "dirpath" create a sorted list of all files in the directory that were modified within the previous hour.
-    Ensure that the full path to each file is used for the sort and is included in the output.
-    The list should include all files in the specified directory and any subdirectories.
+Given a directory specified by "dirpath" create a sorted list of all files in the directory that were modified within the previous hour.
+Ensure that the full path to each file is used for the sort and is included in the output.
+The list should include all files in the specified directory and any subdirectories.
 
  Print this list to the screen, one item on each line.
 ```
