--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -2,3 +2,8 @@
 Link to Handbook:
 https://cted.cybbh.io/tech-college/pns/public/pns/latest/guides/Day_1_WOBC_Student_Guide.html
 
+Getting into Windows Terminal Workstation:
+Password = password
+```
+xfreerdp /u:student /v:10.50.21.242 -dynamic-resolution +glyph-cache +clipboard
+```
