--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -1,5 +1,6 @@
 # Day 1
 Link to Handbook:
+
 https://cted.cybbh.io/tech-college/pns/public/pns/latest/guides/Day_1_WOBC_Student_Guide.html
 
 Getting into Windows Terminal Workstation:
@@ -7,3 +8,37 @@ Password = password
 ```
 xfreerdp /u:student /v:10.50.21.242 -dynamic-resolution +glyph-cache +clipboard
 ```
+
+Powershell ISE as administrator
+
+## Run Selection, Run All
+F8 - runs the selection
+F5 - runs the whole script
+Stop will allow you to stop the script 
+Can be working on multiple scripts at a time using the black paper (Control N)
+
+## Show-Command
+allows you to get a GUI with all the commands
+
+## Get-Help
+can use the commandlet or just use google
+powershell "get-help" that has powershell documentation
+
+## Format-Table
+Allows you to format the information in a table like manner
+
+## Format-List
+Will list whatever you pass to it
+```
+Get-Help | Format-List
+
+```
+## -detailed
+will give more information than initally given
+
+## Comments
+Single line comments start with "#" then you would type the exmplanation of the command
+Paragraph commands start with the <# and ends with #> to start and end a paragraph text comment
+
+
+
