--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -11,21 +11,26 @@ xfreerdp /u:student /v:10.50.21.242 -dynamic-resolution +glyph-cache +clipboard
 
 Powershell ISE as administrator
 
+
 ## Run Selection, Run All
 F8 - runs the selection
 F5 - runs the whole script
 Stop will allow you to stop the script 
 Can be working on multiple scripts at a time using the black paper (Control N)
 
+
 ## Show-Command
 allows you to get a GUI with all the commands
+
 
 ## Get-Help
 can use the commandlet or just use google
 powershell "get-help" that has powershell documentation
 
+
 ## Format-Table
 Allows you to format the information in a table like manner
+
 
 ## Format-List
 Will list whatever you pass to it
@@ -33,12 +38,282 @@ Will list whatever you pass to it
 Get-Help | Format-List
 
 ```
+
 ## -detailed
 will give more information than initally given
+
 
 ## Comments
 Single line comments start with "#" then you would type the exmplanation of the command
 Paragraph commands start with the <# and ends with #> to start and end a paragraph text comment
 
+
+## Variables
+```
+$var = 1
+
+```
+Highlight and F8 will show what the variable is
+
+Integars
+Floats
+Boolean
+Strings
+
+## Typecasting
+
+```
+$var + 1
+2
+
+[string]$var + 'Hellow'
+1Hellow
+
+[bool]$var
+
+[float]$var
+
+[int]$var
+```
+
+## Get-Member
+Will get methods that you can perform wuth the variable
+
+
+## .GetType()
+will get the type of variable
+
+
+## Pull Values from Table
+```
+$var.GetType().name
+Int32
+```
+This will give you a table and then the .name will pull the information value from the table
+
+
+## Automatic Variables
+already created and maintained by powershell
+$False
+	
+
+False
+
+$True
+	
+
+True
+
+$Null
+	
+
+Empty value
+
+$$
+	
+
+Last Token used
+
+$?
+	
+
+Execution status of last operation
+
+$^
+	
+
+First Token in last line received
+
+$_ or $PSItem
+	
+
+Object in current pipeline
+
+$Args
+	
+
+Array of undeclared parameters and/or values
+
+$Error
+	
+
+Most recent error
+
+$Home
+	
+
+full path of user’s home directory
+
+$Host
+	
+
+Current host application
+
+$Input
+	
+
+Enumerator that enumerates all input passed to a function
+
+$LastExitCode
+	
+
+exit code of the last Windows-based program that was run
+
+$Matches
+	
+
+Hash Table of RegEx matches
+
+$PID
+	
+
+PID of current PS session
+
+$Profile
+	
+
+Full path of current user and host application
+
+$PSVersionTable
+	
+
+Details about Windows PowerShell
+
+$PSHome
+	
+
+the full path of the installation directory for PowerShell
+
+$Pwd
+	
+
+Full path of current directory
+
+
+## Arrays
+```
+$myarray = 'Hellow', 12, (get-date), $False
+$myarray.GetType().BaseType.Name
+
+```
+
+
+## Indexing
+```
+$myarray = 'Hellow', 12, (get-date), $False
+
+$myarray[0]
+Hellow
+
+$myarray[0][1]
+e
+
+$myarray[0][5]
+w
+```
+indexing is the same as in python
+
+
+## Nested Arrays
+```
+$var += 1
+2
+
+$newarray = @()  # Multi Array using @() empty array
+
+$newarray.GetType()
+Array
+
+$newarray += 1
+1
+
+$newarray += 2
+1
+2
+```
+
+
+Multifunctional array
+```
+$myarray = @((1,2,3,4)(5,6,7,8)) # Jagged Array
+1
+2
+3
+4
+5
+6
+7
+8
+
+$myarray[0]
+1
+2
+3
+4
+
+$myarray[0][2]
+3
+
+$myarray = @((1,2,3,4)(5,6,7,8), 'Hellow')
+1
+2
+3
+4
+5
+6
+7
+8
+Hellow
+
+$myarray += 'World'
+1
+2
+3
+4
+5
+6
+7
+8
+Hellow
+World
+
+```
+
+## Pipeline " | "
+```
+Get-Process | Get-Member
+
+Get-Help | Format-List
+
+```
+
+
+## Sort
+```
+Get-Process | sort -Property Name
+Get-process | get-member | where-object -property name -EQ ID
+```
+
+## Aliases
+Get-Alias
+
+```
+Get-Alias ls
+ls - Get-ChildItem
+
+```
+
+Setting Alias
+```
+Set-Alias edit notepad.exe
+
+edit # Should Open Notepad.exe
+```
+
+## Use
+Find Cmdlets
+Running Cmdlets
+Varibles
+Reverse Array
 
 
