--- a/0.CareerCourse.md
+++ b/0.CareerCourse.md
@@ -55,6 +55,29 @@ multiple-address letter - used to correspond to more thjan one action adressee
 
 5 paragraph order - issued for the purpose of coordination the execution of an operations
 
+influence of media -
+
+tactical level
+information tha troops recieve about public opinion can affect troop moreal and combat effeciency
+
+operational level
+as the link between the tactical and strategic  media coverage at this level will hace implications for current and future operations
+
+strategic level
+war is an instrument of polotics is driven by public support we cannot accomplish our goals in a theater of operation without public support
+
+marines have the responsibility to tell the marine corps story
+
+to keep the media and public informed so their options of the corps are not skewed
+
+roles of public affairs
+relationship with media and public
+understanding
+credibility
+trust
+mutually beneficial
+
+
 
 
 
