--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -310,10 +310,258 @@ Set-Alias edit notepad.exe
 edit # Should Open Notepad.exe
 ```
 
-## Use
-Find Cmdlets
-Running Cmdlets
-Varibles
-Reverse Array
+
+## ()
+
+```
+$var = [int](Read-Host)
+$var + 2
+{Read-Host}
+```
+
+
+## Practical Practice 1
+
+
+Ensure that you have the latest copy of help by updating your help system.
+
+```
+update-help
+```
+
+Which cmdlets deal with the viewing/manipulating of processes?
+
+```
+Get-Help *process*
+
+Get-Command -noun Process
+
+Get-Process
+```
+Display a list of services installed on your local computer.
+```
+Get-Services
+```
+
+What cmdlets are used to write or output objects or text to the screen?
+```
+Write-Host
+Write-Error
+Write-Output
+Write-Host
+
+```
+
+```
+Write-Warning “This is an example warning.”
+WARNING: Warning
+
+Write-Error “This is an example error.”
+This is an example of error
+
+Write-Output (1+2)
+3
+
+Write-Host “This text will be displayed on the screen.”
+This text will be displayed on the screen.
+```
+
+get-help *write*
+
+What cmdlets can be used to create, modify, list, and delete variables?
+
+```
+Get-Help -noun Variable
+
+
+Get-Variable # Gets variables within the current console
+
+New-Variable # Creates a new variable
+
+Remove-Variable # Deletes a variable and its value
+
+Set-Variable # Changes the value of a variable
+
+```
+
+
+What cmdlet can be used, other than Get-Help, to find and list other cmdlets?
+
+```
+Get-Command
+```
+
+Find the cmdlet that is used to prompt the user for input.
+
+```
+Read-Host # Input recieves a string
+
+$a = Read-Host "Say something"
+Say something:
+$a
+hello
+
+$var = [int](Read Host)
+
+or
+
+$var = Read Host
+[int]$var + 2
+$var
+3
+```
+Takes user input and asigns it to the variable or can just read from the host 
+
+
+## Practical Practice 2
+
+
+
+Display a list of running processes.
+
+```
+Get-Process
+
+```
+
+Display a list of all running processes that start with the letter "s".
+
+```
+Get-Process -name S*
+
+```
+
+Find the cmdlet and its purpose for the following aliases:
+
+gal
+```
+gal -> Get-Alias
+```
+
+dir
+```
+dir -> Get-ChildItem
+```
+
+echo
+```
+echo -> Write-Output
+```
+
+?
+```
+? -> Where-Object
+```
+
+%
+```
+% -> ForEach-Object
+```
+
+ft
+```
+ft -> Format-Table
+
+```
+
+Display a list of Windows Firewall Rules.
+
+```
+Show-NetFirewallRules
+
+```
+
+Create a new alias called "gh" for the cmdlet "Get-Help"
+
+```
+Set-Alias gh Get-Help
+
+gal gh
+
+gh -> Get-Help
+```
+
+
+## Practice Practical 3
+
+Create a variable called "var1" that holds a random number between 25-50.
+
+```
+$var = Invoke-Command { Get-Random -Minimum 25 -Maximum 50 }
+
+```
+
+Create a variable called "var2" that holds a random number between 1-10.
+
+```
+$var = Invoke-Command { Get-Random -Minimum 1 -Maximum 10 }
+
+```
+
+Create a variable called "sum" that holds the sum of var1 and var2.
+
+```
+$sum = $var1 + $var2
+```
+
+
+Create a variable called "sub" that holds the difference of var1 and var2.
+
+```
+$sub = $var1 - $var2
+```
+
+Create a variable called "prod" that holds the product of var1 and var2.
+
+```
+$prod = $var1 * $var2
+```
+
+Create a variable called "quo" that holds the quotient of var1 and var2.
+
+```
+$quo = $var1 / $var2
+```
+Replace the variables in text with their values in the following format:
+
+
+"44" + "7" = "51"
+
+
+Replace the variables in text with their values in the following format:
+
+"44" - "7" = "37"
+
+
+Replace the variables in text with their values in the following format:
+
+"44" * "7" = "308"
+
+
+Replace the variables in text with their values in the following format:
+
+"44" / "7" = "6.28571428571429"
+
+
+## Practice Practical 4
+
+
+
+Create an array containing a range with a random starting and stopping point. The starting point will be a random number from -10 through 0. The ending point will be a random number from 1 through 20.
+
+
+For example, if the first random number is -3, and the second random number is 2, your array will be -3, -2, -1, 0, 1, 2
+
+```
+$myarray = Invoke-Command { $start..$stop }
+$start = Invoke-Command { Get-Random -Minimum -10 -Maximum 0 }
+$stop = Invoke-Command { Get-Random -Minimum 1 -Maximum 20 }
+```
+
+Create a variable that contains the contents of the array in reverse
+
+Using the above example, your reversed array will be 2, 1, 0, -1, -2, -3 
+
+
 
 
