--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -319,6 +319,22 @@ $var + 2
 {Read-Host}
 ```
 
+## Word Wrapping
+
+```
+Get-Alias gal; Get Alias dir; Get-Alias; echo;`
+ Get-Alias echo; Get-Aslias %
+```
+
+## Formatting Input
+'''
+"{0} + {1} = {2}" -f $var1, $var2, $var3
+37 + 2 = 39
+
+
+'''
+-f is allowing you to list and us the positions to pass the list positions into the curly brackets { }
+
 
 ## Practical Practice 1
 
@@ -489,7 +505,13 @@ Create a variable called "var1" that holds a random number between 25-50.
 ```
 $var = Invoke-Command { Get-Random -Minimum 25 -Maximum 50 }
 
+$var1 = Get-Random -Minimum 25 -Maximum 51
+ 
+
 ```
+-Maximum needs to be 1 above what the actual value is
+
+
 
 Create a variable called "var2" that holds a random number between 1-10.
 
@@ -502,6 +524,8 @@ Create a variable called "sum" that holds the sum of var1 and var2.
 
 ```
 $sum = $var1 + $var2
+
+
 ```
 
 
@@ -527,7 +551,13 @@ Replace the variables in text with their values in the following format:
 
 "44" + "7" = "51"
 
+```
+""$var1 + $var2""
 
+
+
+
+```
 Replace the variables in text with their values in the following format:
 
 "44" - "7" = "37"
@@ -543,19 +573,42 @@ Replace the variables in text with their values in the following format:
 "44" / "7" = "6.28571428571429"
 
 
+"{0} + {1} = {2}" -f $var1, $var2, $var3
+
 ## Practice Practical 4
 
 
 
 Create an array containing a range with a random starting and stopping point. The starting point will be a random number from -10 through 0. The ending point will be a random number from 1 through 20.
 
-
 For example, if the first random number is -3, and the second random number is 2, your array will be -3, -2, -1, 0, 1, 2
 
 ```
-$myarray = Invoke-Command { $start..$stop }
-$start = Invoke-Command { Get-Random -Minimum -10 -Maximum 0 }
-$stop = Invoke-Command { Get-Random -Minimum 1 -Maximum 20 }
+$array = (Get-Random -Minimum -10 -Maximum 1)..(Get-Random -Minimum 1 -Maximum 21)
+($array.Length)-1
+
+$reverse = $array[($array.Length-1)..0]
+
+PS C:\windows\system32> $array
+-2
+-1
+0
+1
+2
+3
+4
+5
+
+PS C:\windows\system32> $reverse
+5
+4
+3
+2
+1
+0
+-1
+-2
+
 ```
 
 Create a variable that contains the contents of the array in reverse
