--- a/0.CareerCourse.md
+++ b/0.CareerCourse.md
@@ -77,9 +77,142 @@ credibility
 trust
 mutually beneficial
 
+Principle of information
+tenets of public affairs
+
+honesty builds credibility
+ Because every Marine is perceived as a credible spokesperson, telling the Marine Corps story is a responsibility.
 
 
+provide consistent information
+he public often receives simultaneous information from a variety of official DoD sources at various levels.   
 
+badnews doesnt get better with age
+Withholding or appearing to withhold negative information creates the perception of cover-ups, leads to speculation, and damages the credibility of the Marine Corps. 
+
+
+if news is out its out
+s public and media interest increases, the ability to limit or restrict information flow decreases.
+
+telling our storyu is good
+lthough commanders use designated personnel as official spokespersons, they should educate and encourage all their personnel to tell the Marine Corps story by providing them with timely information that is appropriate for public release.  
+
+the marine corps family is important
+Internal audiences include Marines, civilian employees, retirees, and all affiliated family members throughout the Marine Corps.  This audience must be well informed to ensure maximum effectiveness and the highest sustainable morale. 
+
+the media is not the enemy
+The vast majority of journalists and the organizations they represent are committed to the ideals of providing responsible, accurate, and balanced coverage.  
+
+practice security at teh source
+All individuals are responsible for protecting sensitive information
+
+PA mission is to communicate and engae with domestic and foreign publics to build understnading, credibility, trust, and mutually beneficial relationships
+
+Marine corps public affairs activities
+Command information
+public information
+community engagement
+
+interview categories
+print
+Print media may include newspapers, magazines, newsletters, brochures, or pamphlets. 
+
+televisvion
+When appearing before the camera, always be mindful of your appearance.
+
+panel
+The video clip of General Mattis is an example of a panel interview where the topic of discussion was the "Real Lessons of Operation Iraqi Freedom."
+
+remote
+The interview can take place in real time for a live broadcast or recorded for later viewing.
+Remote interviews can occur between two studios, between a studio and a field location, or between two field locations. 
+
+press conference
+ussually conducted by official spokepersons
+
+ambush
+An ambush interview is an unexpected and impromptu encounter
+
+radio
+A radio interview can be a face-to-face conversation in a studio or a phone interview, live or recorded. 
+
+
+Events that may result in extensive property damage, injury, or even loss of life will raise both public and news media interest" describes which of the following circumstances for media interviews?  Select all that apply. 
+accidents
+incidents
+crises
+contigencies
+
+Print
+This type may appear in a magazine and includes both in-person or on the phone; it is usually more lengthy than a broadcast interview.
+Television
+This type is usually conducted in an office, one-on-one with a reporter and a camera crew; as a rule, it is relaxed and informal.
+Panel
+This type is usually formal and organized, and uses a prepared discussion point or questions to talk with the board or group members.
+Remote
+The interviewer is geographically separated from the guest who will be viewed onscreen in this type of interview.
+Press Conference
+An individual delivers a statement to and fields questions from a group of reporters at a predetermined time and place in this type of interview.
+Ambush
+This type involves an unexpected and impromptu encounter that usually is disconcerting and face-to-face.
+Radio
+This type can be a face-to-face conversation; phone interview, live or not live; and can 
+
+Meeting the media
+Research the medium.
+Research the content and possible questions.
+Consult with your PA officer.
+Prepare for delivery.
+Prepare your appearance.
+Know when you are being taped.
+Gain situational awareness. 
+
+Sometimes, the high points of a story will be condensed into segments, often less than 30 seconds in length. 
+Express your major points in short 10- to 20-second statements.
+Convey the most important messages first.
+Elaborate only after making the main points
+
+
+controlling the interview techniques
+packaging and bridging to keep the conversations rolling and allows for the audience to follow
+
+Relax; be yourself.
+• Tell the truth, even if it is painful. You will maintain credibility by doing so.
+• Explain as much as you can if you cannot discuss something (e.g., “to answer your question
+could compromise operational security” or “the matter remains under investigation”). “No
+comment” isn’t an appropriate response when provided an opportunity to represent your unit
+or the Marine Corps.
+• Tell the reporter if you do not know the answer to a question and offer to get back to the
+reporter later with the answer, if possible.
+• Avoid military or technical jargon. Remember, your audience—foreign and domestic.
+• Answer directly and give the bottom line upfront; you can amplify later.
+• Correct the record. If a reporter makes an error or has wrong information, make the
+correction during the interview.
+• Listen carefully to the reporter; ask for repetition or clarification, if necessary.
+• Maintain eye contact; make sure the reporter knows you are interested and paying attention.
+• Be expressive and try to be interesting.
+• Be humorous, if appropriate. Humor can be one of the best forms of communication.
+• Maintain a positive attitude.
+• Talk “on the record” or not at all.
+• Be prepared to answer the five "Ws" and the "H": who, what, where, when, why, and how.
+• Assume that you are on the air, even if you are told that you are off; technical crews make
+mistakes.
+• Be modest but confident. You are the expert, but do not be condescending.
+• Use the studio monitor to check your appearance before air time, then maintain eye contact
+with the reporter and ignore the monitor.
+• Do not lose your temper—even if provoked. The only part they may air is you losing your
+temper not what prompted it.
+• Do not drum your fingers, twiddle your thumbs, tap your feet, or act nervous.
+• Do not look around the room for the answer; it gives the impression of discomfort, bluffing,
+or desperation.
+• Do not speculate or comment on matters beyond your cognizance or responsibility ("stay in
+your lane").
+
+during an interview 
+
+operational security
+
+information balancing act
 
 
 
