--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -281,7 +281,20 @@ World
 
 ## Pipeline " | "
 ```
-Get-Process | Get-Member
+Get-Process | Get-Member -MemberType Properties
+
+Get-Process | Get-Member -MemberType Method
+
+Get-Service | Format-List
+
+Get-Service | Format-Table
+
+Get-Service | Format-Table Name, Status
+
+Get-Service | Where-Object -Property Status -EQ stopped;`
+Format-Table Name, status
+
+
 
 Get-Help | Format-List
 
@@ -454,6 +467,18 @@ gal
 gal -> Get-Alias
 ```
 
+
+    Display the start time of the earliest and latest running processes
+
+    Identify a cmdlet that returns the current date and time then using this cmdlet and Select-object, display only the current day of the week
+
+    Identify a cmdlet that displays a list of installed hotfixes.
+
+    Extend the expression to sort the list by install date, and display only the install date and hotfix ID.
+
+    Extend the expression further, but this time sort by description, include description, hotfix ID, and install Date.
+
+
 dir
 ```
 dir -> Get-ChildItem
@@ -507,6 +532,18 @@ $var = Invoke-Command { Get-Random -Minimum 25 -Maximum 50 }
 
 $var1 = Get-Random -Minimum 25 -Maximum 51
  
+
+    Display the start time of the earliest and latest running processes
+
+    Identify a cmdlet that returns the current date and time then using this cmdlet and Select-object, display only the current day of the week
+
+    Identify a cmdlet that displays a list of installed hotfixes.
+
+    Extend the expression to sort the list by install date, and display only the install date and hotfix ID.
+
+    Extend the expression further, but this time sort by description, include description, hotfix ID, and install Date.
+
+
 
 ```
 -Maximum needs to be 1 above what the actual value is
@@ -616,5 +653,100 @@ Create a variable that contains the contents of the array in reverse
 Using the above example, your reversed array will be 2, 1, 0, -1, -2, -3 
 
 
+## Hashtable
+
+```
+$a = {}
+$a.GetType()
+Hashtable
+
+```
+
+Get-ChildItem
+
+## Functions
+
+```
+function Get-Head {
+Write-Host "Coors Light"
+Write-Host "Coors Banquet"
+Write-Host "Four Loko"
+Write-Host "Yeungling"
+}
+
+PS C:\windows\system32> Get-Head
+Coors Light
+Coors Banquet
+Four Loko
+Yeungling
+
+Get-Head | sort
 
 
+
+```
+
+## {} vs ()
+
+() if code is in parenthisis it will automatically run
+
+{} has to be invoked using invoke-command
+Invoke-Command {Command} or &{Command}
+
+
+## Practice Exersice: Arrays & Hash Tables
+
+```
+$employee1 = [ordered]@{}
+$employee2 = @{}
+$employee1.First = "Mary"
+$employee1["Last"] = "Hopper"
+$employee1.ID = "001"
+$employee1["Job"] = "Software Developer"
+
+$employee2.First = "John"
+$employee2["Last"] = "Williams"
+$employee2.ID = "002"
+$employee2["Job"] = "Software Developer"
+```
+
+## Practice Exercise : The Pipeline
+
+
+
+Display the start time of the earliest and latest running processes
+
+```
+Get-Process | select name,starttime | sort -Descending Starttime | select-object -First 1
+Get-Process | select name,starttime | sort -Descending Starttime | select-object -Last 1
+
+```
+
+Identify a cmdlet that returns the current date and time then using this cmdlet and Select-object, display only the current day of the week
+```
+
+Get-Date | Select-Object -ExpandProperty DayOfWeek
+
+```
+
+
+Identify a cmdlet that displays a list of installed hotfixes.
+
+```
+Get-Hotfix
+
+```
+
+Extend the expression to sort the list by install date, and display only the install date and hotfix ID.
+
+```
+Get-hotfix | sort -Descending Installedon | select InstalledOn, HotFixID
+```
+
+Extend the expression further, but this time sort by description, include description, hotfix ID, and install Date.
+
+```
+Get-hotfix | sort -Descending Description | select -Property Description, HotfixID, InstalledOn
+
+
+```|
