--- a/0.CareerCourse.md
+++ b/0.CareerCourse.md
@@ -44,7 +44,7 @@ email - used by individuals within units for informaiton both formally and infor
 endoresment - used to forward a letter with comments or recommendations through the COC
 
 memorandum for the record - used to document ecisions which arise within meetings, conferences, phone conversations, etc
-
+https://github.com/solismark/COSC/edit/main/0.CareerCourse.md
 memerandum of agreement - used to document mutual agreements
 
 aa form - used to strandardize certain routin actions which reduce the administrative workload
@@ -213,6 +213,31 @@ during an interview
 operational security
 
 information balancing act
+
+the marinecorps has an obligation to provide timely and accurate information to the american people
+ The release of information is impacted by many considerations including:
+
+    DoD Principles of Information
+    Freedom of Information Act
+    Privacy Act
+    Uniform Code of Military Justice (UCMJ)
+    Operations security (OPSEC)
+    Host-nation sensitivities
+    Information security
+    Principles of Security, Accuracy, Policy and Propriety (SAPP)
+    Public affairs guidance (PAG) issued by the command PA officer, Headquarters Marine Corps Division of PA, and DoD PA
+    DoD, Navy, and Marine Corps publications, orders, directives, and instructions
+    ALMAR 008/17
+
+
+OPSEC
+
+Every marine is an official spokesperson
+you should be prepared to talk to a reporter at any time so to be prepared we must always know what is releasable or not
+individuals are responsible for what they release.
+Before releasing information, consider public affairs guidance (PAG) and operations security.
+Don't jeopardize security, safety, or privacy.
+Practice security at the source. 
 
 
 
