--- a/0.CareerCourse.md
+++ b/0.CareerCourse.md
@@ -234,10 +234,91 @@ OPSEC
 
 Every marine is an official spokesperson
 you should be prepared to talk to a reporter at any time so to be prepared we must always know what is releasable or not
+
 individuals are responsible for what they release.
 Before releasing information, consider public affairs guidance (PAG) and operations security.
 Don't jeopardize security, safety, or privacy.
 Practice security at the source. 
+
+
+
+
+
+Warfighting
+ Warfighting is:
+
+    A violent clash of interests (Marines only fight enemy combatants.)
+    A violent struggle between wills, one trying to impose itself on the other (Marines do not harm enemy soldiers who surrender.)
+    A social process
+    The application or threat of violence by military forces used to restore or maintain order
+
+leadership 3 dimensions
+mental moral and physical
+
+Friction is the force that resists all action and saps energy.  It makes the simple difficult and the difficult seemingly impossible.
+Friction can be mental or physical.
+It can come from enemy actions, terrain, and weather, or it can be self-imposed. 
+the main weapon against friction is human will
+training and experience will teach us to fight in an environment of friction
+
+uncertanty referred to as the fog of war
+unpredictability 
+risk equally common to action and inaction
+chance
+
+attributes of war
+fluidity 
+Each episode of war is the temporary result of a unique combination of circumstances presenting a unique set of problems that require an original solution.    
+
+disorder
+inherent characteristic of war
+we can never eliminate it
+plans will go awry in the heat of battle
+communications will fail
+mistakes and unforseen events will be commonplay
+
+
+complexity
+ Efforts to fully centralize military operations and to exert complete control by a single decision-maker are inconsistent with the intrinsically complex and distributed nature of war. 
+
+an extreme trial of the human dimension
+the human dimension
+war is shaped by human nature and is subject to complexity
+
+violence and danger
+ War is among the greatest horrors known to humanity.
+
+    It should never be romanticized.
+    It is applied in the form of organized violence.
+    We use force to bend the enemy to our will.
+    Violence is an essential element of war.  
+    Danger is ever-present. 
+
+    
+physical moral and mental forces
+ Physical:
+
+    Generally easily seen, understood, and measured
+    Equipment, capabilities, and supplies
+    Physical objectives seized, force ratios, losses of matériel or life
+    Terrain lost or gained; prisoners or matériel captured
+
+Moral:
+
+    Pertains to those forces of a psychological rather than tangible nature
+    Term not restricted to ethics, although ethics are certainly included  
+    Difficult to grasp and impossible to quantify  
+
+Mental:
+
+    Provide the ability to grasp complex battlefield situations
+    Make effective estimates, calculations, and decisions
+    Devise tactics and strategies
+    Develop plans
+
+
+
+
 
 
 
