--- a/3.Powershell.md
+++ b/3.Powershell.md
@@ -709,6 +709,15 @@ $employee2["Last"] = "Williams"
 $employee2.ID = "002"
 $employee2["Job"] = "Software Developer"
 ```
+## Get-Member
+
+```
+Get-date | Get-Member
+
+```
+will give you all the fictions for that command
+
+
 
 ## Practice Exercise : The Pipeline
 
@@ -720,9 +729,25 @@ Display the start time of the earliest and latest running processes
 Get-Process | select name,starttime | sort -Descending Starttime | select-object -First 1
 Get-Process | select name,starttime | sort -Descending Starttime | select-object -Last 1
 
+(Get-Process | Where-Object{$_.item.Starttime} | Measure-Object).count
+
+
+Get-Process | Measure-Object -Property Starttime -Minimum -Maximum | Select-Object Minimum, Maximum
+
+Minimum              Maximum             
+-------              -------             
+6/10/2024 1:23:47 PM 6/25/2024 1:14:22 PM
+
+
+(Get-Process | Measure-Object -Property Starttime -Minimum -Maximum | Select-Object Minimum, Maximum).minimum
+
+Monday, June 10, 2024 1:23:47 PM
+
 ```
 
+
 Identify a cmdlet that returns the current date and time then using this cmdlet and Select-object, display only the current day of the week
+
 ```
 
 Get-Date | Select-Object -ExpandProperty DayOfWeek
@@ -741,6 +766,11 @@ Extend the expression to sort the list by install date, and display only the ins
 
 ```
 Get-hotfix | sort -Descending Installedon | select InstalledOn, HotFixID
+
+Get-HotFix | Sort-Object InstalledOn | Select-Object Installedon, HotfixID
+
+
+
 ```
 
 Extend the expression further, but this time sort by description, include description, hotfix ID, and install Date.
@@ -748,5 +778,10 @@ Extend the expression further, but this time sort by description, include descri
 ```
 Get-hotfix | sort -Descending Description | select -Property Description, HotfixID, InstalledOn
 
+(Get-HotFix | Sort-Object Description | Select-Object Description, InstalledOn, HotfixID).description[-1]
 
-```|
+
+```
+
+
+you can use the ().count to index the position of the list and grab the information out
